[package]
name = "astro"
version = "0.1.0"
edition = "2021"

[features]
default=[]
client=["bevy/default", "nvm-bevyutil/render"]

[dependencies]
slotmap = "1.0.6"
enumflags2="0.7.3"
shrinkwraprs = "0.3.0"
smallvec = "1.7.0"
once_cell = "1.9.0"
modular-bitfield = "0.11.2"

[dependencies.nvm-bevyutil]
path="../bevyutil"
default-features=false

[dependencies.bevy]
git="https://github.com/bevyengine/bevy.git"
branch="main"
default-features=false
